--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/*Typography*/
+
 html{
    font-size: 62.5%;
 }
@@ -44,4 +46,27 @@ p{
    h3{
       font-size: 2.4rem;
    }
+}
+/*Links*/
+a{
+   text-decoration: none;
+}
+.Link-arrow{
+   color: var(--color-accent);
+   text-transform: uppercase;
+   font-size: 2rem;
+   font-weight: bold;
+}
+.Link-arrow::after{
+   content: '-->';
+   margin-left: 5px;
+   transition:margin 0.15s ;
+}
+.Link-arrow:hover::after{
+   margin-left: 10px;
+}
+@media screen and (min-width:1024px){
+.Link-arrow{
+   font-size: 1.5rem;
+}
 }
