--- a/css/styles.css
+++ b/css/styles.css
@@ -120,5 +120,22 @@ margin-right: 2rem;
    .list--tick .list--item{
       padding-left: 0;
    }
-   
+}
+
+/*icons*/
+.icon{
+   width: 40px;
+   height: 40px;
+}
+.icon--primary{
+   fill: var(--color-primary);
+}
+.icon-container{
+   background: #f3f9fa;
+   width: 64px;
+   height: 64px;
+   border-radius: 100px;
+   display: inline-flex;
+   justify-content: center;
+   align-items: center;
 }
