--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ html{
    --color-accent:#ff3400;
    --color-headings:#1b0760;
    --color-body:#918ca4;
+   --color-border:#ccc;
+   --border-radius:30px;
 }
 *,*::after,*::before{
    box-sizing: border-box;
@@ -196,8 +198,8 @@ margin-right: 2rem;
 }
 /*Inputs*/
 .input{
-   border-radius: 30px;
-   border: 1px solid #ccc;
+   border-radius: var(--border-radius);
+   border: 1px solid var(--color-border);
    color: var(--color-headings);
    font-size: 2rem;
    outline: 0;
@@ -205,6 +207,19 @@ margin-right: 2rem;
 }
 ::placeholder{
    color: #cdcbd7;
+}
+.input-group{
+   border: 1px solid var(--color-border);
+   border-radius: var(--border-radius);
+   display: flex;
+}
+.input-group .input{
+   border: 0;
+   flex-grow: 1;/* grow to take all the space*/
+   padding: 1.5rem 1rem;
+}
+.input-group .btn{
+   margin: 4px;
 }
 @media screen and (min-width:1024px){
    .input{
