--- a/components/cards.html
+++ b/components/cards.html
@@ -1,7 +1,7 @@
 <div style="width:30%; padding:4rem">
     <div class="card card--primary">
-      <header class="card--header">Card Title</header>
-      <div class="card--body">
+      <header class="card__header">Card Title</header>
+      <div class="card__body">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, natus?
       </div>
   </div>
