--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ a{
 }
 .badge--small{
    font-size: 1.6rem;
+   padding: 0.5rem 1.5rem ;
 }
 @media screen and (min-width:1024px){
 .badge{
@@ -185,7 +186,7 @@ margin-right: 2rem;
 .btn--outline{
    background: #fff;
    color: var(--color-headings);
-   border-radius: 2px solid var(--color-headings);
+   border:2px solid var(--color-headings);
 }
 .btn--outline:hover{
    background: var(--color-headings);
@@ -232,15 +233,57 @@ margin-right: 2rem;
    box-shadow: 0 0 20px 10px #f3f3f3 ;
    overflow: hidden;
 }
-.card--header, 
-.card--body{
+.card__header, 
+.card__body{
    padding: 2rem 3rem;
 }
-.card--primary .card--header{
+.card--primary .card__header{
    background: var(--color-primary);
    color: #fff;
 }
-.card--secondary .card--header{
+.card--secondary .card__header{
    background: var(--color-secondary);
    color: #fff;
+}
+/*Plans*/
+.plan__name{
+   color: #fff;
+   margin: 0;
+   font-weight: 500;
+   font-size: 2.4rem;
+}
+plan__price{
+   font-size: 6rem;
+}
+.plan__billing-cycle{
+   font-size: 2.4rem;
+   font-weight:300 ;
+   opacity: 0.8;
+   margin-right: 1rem;
+}
+.card--secondary .badge--secondary{
+   background: #02cdf1;
+}
+.plan__description{
+   font-size: 2rem;
+   font-weight: 300;
+   letter-spacing: 1px;
+   display: block;
+}
+.plan .list--item{
+   margin-bottom: 2rem;
+}
+@media screen and (min-width:1024px){
+   .plan__name{
+      font-size: 1.4rem;
+   }
+   .plan__price{
+      font-size: 5rem;
+   }
+   .plan__billing-cycle{
+      font-size: 1.6rem;
+   }
+   .plan__description{
+      font-size: 1.7rem;
+   }
 }
