Define grid component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -353,5 +353,17 @@ content: open-quote;
       font-size: 1.6rem;
    }
    }
-   
-}
+   /*Grids*/
+   .grid{
+      display: grid;
+   }
+   @media screen and (min-width:768px){
+      .grid--cols-2{
+         grid-template-columns: 1fr 1fr; /*the same as  "repeat(2,1fr)"*/
+      }
+   }
+   @media screen and (min-width:1024px){
+      .grid--cols-3{
+         grid-template-columns: repeat(3,1fr)
+      }
+   }
