--- a/css/styles.css
+++ b/css/styles.css
@@ -190,10 +190,7 @@ margin-right: 2rem;
 .btn--accent:hover{
    background: #ec3000;
 }
-.btn--block{
-   width: 100%;
-   display: inline-block;
-}
+
 .btn--outline{
    background: #fff;
    color: var(--color-headings);
@@ -203,11 +200,22 @@ margin-right: 2rem;
    background: var(--color-headings);
    color: #fff;
 }
+.btn--stretched{
+   padding-left: 6rem;
+   padding-right: 6rem;
+
+}
+.btn--block{
+   width: 100%;
+   display: inline-block;
+}
+
 @media screen and (min-width:1024px) {
    .btn{
       font-size: 1.5rem;
    }
 }
+
 /*Inputs*/
 .input{
    border-radius: var(--border-radius);
@@ -401,4 +409,36 @@ content: open-quote;
          margin-left: 6rem;
       }
    }
-
+   /*Callouts*/
+   .callout{
+      padding: 4rem;
+      border-radius: 5px;
+   }
+   .callout--primary{
+      background: var(--color-primary);
+      color: #fff;
+   }
+   .callout__heading{
+      color: #fff;
+      margin-top: 0;
+      font-size: 3rem;
+   }
+   .callout .btn{
+      justify-self: center;/*for the items in grid we use self*/
+      align-self: center;
+   }
+   .callout__content{
+      text-align: center;
+   }
+@media screen and (min-width:768px) {
+   .callout .grid--cols-2{
+      grid-template-columns: 1fr auto;
+   }
+   .callout__content{
+      text-align: left;
+   }
+   .callout .btn{
+      justify-self: start;
+      margin: 0 2rem;
+   }
+}
