--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ margin-right: 2rem;
    width: 40px;
    height: 40px;
 }
+
 .icon--small{
    width: 30px;
    height: 30px;
@@ -141,9 +142,10 @@ margin-right: 2rem;
 .icon--primary{
    fill: var(--color-primary);
 }
-.icon--white{
+.icon--white {
    fill:#fff ;
 }
+
 .icon-container{
    background: #f3f9fa;
    width: 64px;
@@ -441,4 +443,30 @@ content: open-quote;
       justify-self: start;
       margin: 0 2rem;
    }
+}
+/*Collapsibles*/
+.collapsible__header{
+   display: flex;
+   justify-content: space-between;
+}
+.collapsible__heading{
+   margin-top: 0;
+   font-size: 3rem;
+}
+.collapsible__chevron {
+   transform:rotate(-90deg);
+   transition: transform 0.3s;
+}
+.collapsible__content{
+ max-height: 0;
+ overflow: hidden;
+ opacity: 0;
+ transition: all 0.3s;
+}
+.collapsible--expanded .collapsible__chevron{
+transform: rotate(0);
+}
+.collapsible--expanded .collapsible__content{
+   max-height: 100vh;
+   opacity: 1;
 }
