--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body{
 h1,h2,h3{
    color: var(--color-headings);
    margin-bottom: 1rem;
+   line-height: 1.1;
 }
 h1{
    font-size: 7rem;/*70px*/
@@ -474,7 +475,7 @@ transform: rotate(0);
 .block{
    --padding-vertical:6rem;
    padding: var(--padding-vertical) 2rem;
-   
+   display: block;
 }
 .block__header{
    text-align: center;
@@ -497,7 +498,6 @@ transform: rotate(0);
 .block--skewed-left{
    padding-bottom: calc(var(--padding-vertical) + 4rem);
    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
-
 }
 .container{
    max-width: 1140px;
@@ -554,5 +554,27 @@ transform: rotate(0);
    }
    .nav__item{
       border: 0;
+   }
+}
+/*Hero*/
+.hero{
+   clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+.hero__tagline{
+   font-size: 2rem;
+   color: #b9c3cf;
+   letter-spacing: 1px;
+   margin: 2rem 0 5rem;
+}
+.hero__image{
+  width: 100%; 
+}
+@media screen and (min-width:768px) {
+   .hero{
+      padding-top: 0;
+   }
+   .hero__content{
+      text-align: left;
+      align-self:center ;
    }
 }
