Define block domain component

--- a/components/hero.html
+++ b/components/hero.html
@@ -1,4 +1,4 @@
-<sectino class="block block--dark block--skewed-left hero">
+<section class="block block--dark block--skewed-left hero">
   <div class="container grid grid--cols-2">
     <header class=" block__header hero__content">
       <h1 class="block__heading">Cloud Hosting for Pros</h1>
@@ -17,4 +17,4 @@
       <img class="hero__image" src="images/banner.png" alt=""/>
     </picture>
   </div>
-</sectino>
+</section>
