--- a/css/styles.css
+++ b/css/styles.css
@@ -167,10 +167,17 @@ margin-right: 2rem;
    font-size:1.8rem ;
    font-weight: 600;
    margin: 1rem 0;
+   outline: 0;
    padding: 2rem 3rem;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;
+}
+.btn .icon{
+   width: 2rem;
+   height: 2rem;
+   margin-right: 1rem;
+   vertical-align: middle;
 }
 .btn--primary{
    background: var(--color-primary);
@@ -239,7 +246,7 @@ margin-right: 2rem;
 .input-group .input{
    border: 0;
    flex-grow: 1;/* grow to take all the space*/
-   padding: 1.5rem 1rem;
+   padding: 1.5rem 2rem;
 }
 .input-group .btn{
    margin: 4px;
@@ -577,4 +584,30 @@ transform: rotate(0);
       text-align: left;
       align-self:center ;
    }
+}
+/*Domain Block*/
+.block-domain .input-group{
+   box-shadow: 0 0 30px 20px #e6ebee;
+   border: 0;
+   margin: 4rem auto;
+   max-width:670px;
+}
+.block-domain__prices{
+   display: grid;
+   grid-template-columns:repeat(3,1fr) ;
+   grid-template-rows:repeat(2,6rem) ;/*6rem is the height of each row*/
+   font-size: 2rem;
+   font-weight: 600;
+   justify-items: center;/*for horizontal alignement*/
+   max-width: 700px;
+   margin:0 auto ;
+
+}
+@media screen and (min-width:768px) {
+   .block-domain__prices{
+      grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));/*cause we dont wanna use hard code repeat(6,1fr) we dont use specific number for columns*/
+      /*minmax(100px,1fr) min 10rem and distributed to the max size*/
+      /*if in the future we wanna change the number of li it works properly*/
+   }
+   
 }
