Define plans blocks.

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,9 @@ margin-right: 2rem;
    color: #fff;
 }
 /*Plans*/
+.plan{
+   transition: transform 0.2s ease-out;
+}
 .plan__name{
    color: #fff;
    margin: 0;
@@ -290,6 +293,9 @@ plan__price{
    opacity: 0.8;
    margin-right: 1rem;
 }
+.card--primary .badge--primary{
+   background: #126de4;
+}
 .card--secondary .badge--secondary{
    background: #02cdf1;
 }
@@ -302,6 +308,9 @@ plan__price{
 .plan .list--item{
    margin-bottom: 2rem;
 }
+.plan--popular{
+   transform: scale(1.1);
+}
 .plan--popular .card__header{
    position:relative ;
 }
@@ -312,6 +321,12 @@ display: inline-block;
 position: absolute;
 top: -6px;
 right: 5%;
+}
+.plan:hover{
+   transform: scale(1.05);
+}
+.plan--popular:hover{
+   transform: scale(1.15);
 }
 @media screen and (min-width:1024px){
    .plan__name{
@@ -610,4 +625,12 @@ transform: rotate(0);
       /*if in the future we wanna change the number of li it works properly*/
    }
    
+}
+/*Plans Block*/
+.block-plans .grid{
+   gap:8rem 4rem;
+}
+.block-plans .card{
+   max-width: 500px;
+   margin: 0 auto;
 }
