--- a/components/cards.html
+++ b/components/cards.html
@@ -1,4 +1,4 @@
-<div style="width:30%; padding:4rem">
+<div >
     <div class="card card--primary">
       <header class="card__header">Card Title</header>
       <div class="card__body">
