--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 /*Typography*/
 
+::selection{
+   background: var(--color-primary);
+   color: #fff;
+}
 html{
    font-size: 62.5%;
 }
@@ -36,6 +40,7 @@ h2{
 h3{
    font-size: 3rem;
    margin-bottom: 2rem;
+   font-weight: 500;
 }
 p{
    margin-top: 0;
@@ -109,7 +114,6 @@ a{
 .list{
    list-style: none;
    padding-left: 0;
-   color:var(--color-headings);
 }
 .list--inline .list--item{
 display: inline-block;
@@ -118,7 +122,7 @@ margin-right: 2rem;
 .list--tick{
    list-style-image: url(../images/tick.svg);
    padding-left: 3rem;
-
+   color:var(--color-headings);
 }
 .list--tick.list--item{
    padding-left: 0.5rem;
@@ -345,6 +349,7 @@ right: 5%;
 /*Media*/
 .media{
    display: flex;
+   margin-bottom:4rem ;
 }
 .media__title{
    margin-top: 0;
@@ -509,17 +514,20 @@ transform: rotate(0);
    background: #000;
    color: #7b858b;
 }
-.block--dark .block__heading{
+.block--dark h1,
+.block--dark h2,
+.block--dark h3{
    color: #fff;
+   margin-top: 0;
 }
 .block--skewed-right{
    padding-bottom: calc(var(--padding-vertical) + 4rem);
-   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 
 }
 .block--skewed-left{
    padding-bottom: calc(var(--padding-vertical) + 4rem);
-   clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+   clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 .container{
    max-width: 1140px;
@@ -579,9 +587,7 @@ transform: rotate(0);
    }
 }
 /*Hero*/
-.hero{
-   clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
+
 .hero__tagline{
    font-size: 2rem;
    color: #b9c3cf;
@@ -654,4 +660,19 @@ transform: rotate(0);
       order: 2;
    }
 }
-
+/*Showcase Block*/
+.block-showcase__image >img{
+   width: 100%;
+}
+@media screen and (min-width:768px){
+   .block-showcase .grid{
+      grid-template-columns: 50% 50%;
+   }
+   .block-showcase__image{
+      justify-self: end;
+   }
+   .block-showcase__image>img{
+      width: auto;
+      max-width: 700px;
+   }
+}
