Define testimonial component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -506,6 +506,8 @@ transform: rotate(0);
 }
 .block__header{
    text-align: center;
+   margin-bottom: 4rem;
+
 }
 .block__heading{
    margin-top: 0;
