Define footer component.

--- a/components/showcase block.html
+++ b/components/showcase block.html
@@ -14,8 +14,8 @@
       />
       <img src="images/ipad.png" alt="" />
     </picture>
-    <ul>
-      <li class="list">
+    <ul class="list">
+      <li >
         <div class="media">
           <div class="media__image">
             <svg class="icon icon--primary">
@@ -32,7 +32,7 @@
           </div>
         </div>
       </li>
-      <li class="list">
+      <li >
         <div class="media">
           <div class="media__image">
             <svg class="icon icon--primary">
@@ -49,7 +49,7 @@
           </div>
         </div>
       </li>
-      <li class="list">
+      <li >
         <div class="media">
           <div class="media__image">
             <svg class="icon icon--primary">
