--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ margin-right: 2rem;
    font-weight: 600;
    margin: 1rem 0;
    outline: 0;
-   padding: 2rem 3rem;
+   padding: 2rem 4vw;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;
@@ -251,6 +251,7 @@ margin-right: 2rem;
    border: 0;
    flex-grow: 1;/* grow to take all the space*/
    padding: 1.5rem 2rem;
+   width: 0;
 }
 .input-group .btn{
    margin: 4px;
@@ -616,8 +617,9 @@ transform: rotate(0);
    max-width:670px;
 }
 .block-domain__prices{
+   color: var(--color-headings);
    display: grid;
-   grid-template-columns:repeat(3,1fr) ;
+   grid-template-columns:repeat(2,1fr) ;
    grid-template-rows:repeat(2,6rem) ;/*6rem is the height of each row*/
    font-size: 2rem;
    font-weight: 600;
