--- a/css/styles.css
+++ b/css/styles.css
@@ -461,6 +461,10 @@ content: open-quote;
    .callout__content{
       text-align: center;
    }
+   /* Sign-up Callout */
+   .callout-signup {
+   transform: translateY(5rem);
+ }
 @media screen and (min-width:768px) {
    .callout .grid--cols-2{
       grid-template-columns: 1fr auto;
